# data-structure-algorithm

./: .gitignore  CMakeLists.txt  link_stack.c  readme.md
linear_list/: duLinkList.c  linklist.c  linklist_oper.c  seqlist_oper.c  static_list.c
linear_table/: order_table.c  order_table_operation.c  readme.md
queue/: lineQueue.c  linkQueue.c  seqQueue1.c
stack/: lineStack.c  seq_stack.c
string/: BF.c  link_string.c  req_string.c
